[package]
name = "sled-migrator"
version = "0.1.0"
authors = ["Timo <timo@koesters.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled_0_31 = { version = "0.31", package = "sled" }
sled_0_32 = { version = "0.32", package = "sled" }
sled_0_33 = { version = "0.33", package = "sled" }
sled_0_34 = { version = "0.34", package = "sled" }
